--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moon": "^2.0.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.8",
     "suncalc": "^1.9.0",
